[package]
name = "mdpls"
version = "0.1.0"
authors = ["Andy Russell <arussell123@gmail.com>"]
edition = "2018"

[dependencies]
httparse = "1.3.4"
atoi = "0.3.2"
serde_json = "1.0.44"
lsp-types = "0.70.0"
serde = "1.0.104"
log-panics = { version = "2.0.0", features = ["with-backtrace"] }
simple-logging = "2.0.2"
log = "0.4.8"
buf_redux = "0.8.4"
aurelius = "0.7.2"
env_logger = "0.7.1"
thiserror = "1.0.10"

[dev-dependencies]
assert_cmd = "0.12.0"
assert_matches = "1.3.0"
